@@ -1,5 +1,6 @@
 --- v0.3 development series ---
 
+- Better control over how messages should be displayed in the conversation
 - Improve message display code
 - New option to display messages using a monospaced font for specific senders
 - Basic compatibility with Enigmail for signatures and encrypted emails.
